Исправил замечания, добавил валидатор изменил тесты